--- a/cs598-fa18/index.html
+++ b/cs598-fa18/index.html
@@ -19,7 +19,7 @@
     <b>Instructor</b>
   </dt>
         <dd>
-            <a href="https://tianyin.github.io">Tianyin Xu</a>
+            <a href="https://tianyin.github.io" target="_blank">Tianyin Xu</a>
             <br><a href="mailto:tyxu@illinois.edu">tyxu@illinois.edu</a>
             <br> 4108 Siebel Center
             <p>
@@ -90,7 +90,7 @@
 
     <ul>
         <li>
-            <a href="readings.html">Reading list and schedule</a>
+            <a href="readings.html" target="_blank">Reading list and schedule</a>
         </li>
     </ul>
 
@@ -133,13 +133,13 @@
     <p></p>
     <ul>
         <li>
-            <a href="project.html">Project description</a>
+            <a href="project.html" target="_blank">Project description</a>
         </li>
     </ul>
 
     <p>
         You are expected to be aware of UIUC's
-        <a href="http://studentcode.illinois.edu/article1_part4_1-401.html">academic
+        <a href="http://studentcode.illinois.edu/article1_part4_1-401.html" target="_blank">academic
           integrity guidelines</a>. Any violation of the course or university policies
           will be treated seriously, and could lead to severe repercussions.
           Don't cheat. It's not worth it.
