add the hardware component as per req

--- a/cs598-fa18/index.html
+++ b/cs598-fa18/index.html
@@ -57,6 +57,7 @@
         We will be going over the following topics:
         <ul>
             <li>Availability</li>
+            <li>Hardware faults</li>
             <li>Software defects</li>
             <li>Configuration and operation errors</li>
             <li>Network failures</li>
