--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -185,23 +185,43 @@
                     <td class="papers">
                         <ul>
                             <li> L. A. Barroso, J. Clidaras, and U. Hölzle,
-                                <a class="paperlink" href="https://www.morganclaypool.com/doi/abs/10.2200/S00516ED2V01Y201306CAC024" target="_blank">Chapter 1:
-                                  Introduction</a>, The Datacenter as a Computer:
+                                <a class="paperlink" href="https://www.morganclaypool.com/doi/abs/10.2200/S00516ED2V01Y201306CAC024" target="_blank">The Datacenter as a Computer:
                                   An Introduction to the Design of Warehouse-Scale
-                                  Machines (2nd Edition), July 2013.
+                                  Machines (2nd Edition)</a>, Morgan & Claypool, July 2013. <b>Read: Chapter 1 (Introduction) and Chapter 7 (Dealing with Failures and Repairs)</b>.
                                 <p></p>
                             </li>
-                            <li> JC van Winkel,
-                                <a class="paperlink" href="https://landing.google.com/sre/book/chapters/production-environment.html" target="_blank">The
-                                  Production Environment at Google,
-                                  from the Viewpoint of an SRE</a>,
-                                  Site Reliability Engineering:
-                                  How Google Runs Production Systems, O'Reilly, April 2016.
+                            <li> J. Dean,
+                                <a class="paperlink" href="https://www.youtube.com/watch?v=modXC5IWTJI&t=190s" target="_blank">Building
+                                  Software Systems At Google and Lessons Learned</a>,
+                                  Distinguished Lecture Series (DLS), Stanford, 2010. <b>Watch the video</b>.
+                                  <p></p>
                             </li>
+                            <li> Optional related papers mentioned in Dean's talk:
+                                 <p></p>
+                              <ul>
+                                <li>S. Ghemawat, H. Gobioff, and 	S-T. Leung,
+                                <a class="paperlink" href="https://static.googleusercontent.com/media/research.google.com/en//archive/gfs-sosp2003.pdf" target="_blank">The Google file system</a>,
+                                In Proceedings of the 19th ACM Symposium on Operating Systems Principles (SOSP), October 2013.
+                                  <p></p>
+                            </li>
+                            <li> J. Dean and S. Ghemawat,
+                                <a class="paperlink" href="https://static.googleusercontent.com/media/research.google.com/en//archive/mapreduce-osdi04.pdf" target="_blank">MapReduce: simplified data processing on large clusters</a>,
+                                In Proceedings of the 6th USENIX Symposium on
+                                Operating Systems Design and Implementation
+                                (OSDI), December 2004.
+                                  <p></p>
+                            </li>
+                            <li> J. C. Corbett et al.,
+                                <a class="paperlink" href="https://www.usenix.org/system/files/conference/osdi12/osdi12-final-16.pdf" target="_blank">Spanner: Google’s Globally-Distributed Database</a>,
+                                In Proceedings of the 10th USENIX Symposium on
+                                Operating Systems Design and Implementation
+                                (OSDI), October 2012.
+                            </li>
+                          </ul>
                         </ul>
                     </td>
                 </tr>
-
+<!--
                 <tr>
                     <td class="date"><a name="2th">Thu<br>9/6</a></td>
                     <td class="papers">
@@ -221,7 +241,36 @@
                         </ul>
                     </td>
                 </tr>
+-->
+            </tbody>
+        </table>
 
+        <h2>Hardware Faults</h2>
+
+        <table>
+            <tbody>
+                <tr>
+                    <td class="date"><a name="2tu">Tue<br>9/4</a></td>
+                    <td class="papers">
+                        <ul>
+                            <li> H. S. Gunawi, et al.,
+                                <a class="paperlink" href="https://www.usenix.org/node/210509" target="_blank">
+                                  Fail-Slow at Scale: Evidence of Hardware
+                                  Performance Faults in Large Production Systems</a>,
+                                  In Proceedings of the 16th USENIX Conference on
+                                  File and Storage Technologies (FAST), February 2018.
+                                <p></p>
+                            </li>
+                            <li> B. Schroeder, R. Lagisetty, and A. Merchant,
+                                <a class="paperlink" href="https://www.usenix.org/node/194415" target="_blank">
+                                  Flash Reliability in Production: The Expected and the Unexpected</a>,
+                                  In Proceedings of the 14th USENIX Conference on
+                                  File and Storage Technologies (FAST), February 2016.
+                                <p></p>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
             </tbody>
         </table>
 
