--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -250,7 +250,7 @@
         <table>
             <tbody>
                 <tr>
-                    <td class="date"><a name="2tu">Tue<br>9/4</a></td>
+                    <td class="date"><a name="2th">Thu<br>9/6</a></td>
                     <td class="papers">
                         <ul>
                             <li> H. S. Gunawi, et al.,
