--- a/cs598-fa18/index.html
+++ b/cs598-fa18/index.html
@@ -38,8 +38,11 @@
             Tu/Th 17:00–18:00pm or by appointment
             <br> 4108 Siebel Center
         </dd>
-        <p>
-        </p>
+        <p></p>
+        <dt><b>Forums</b></dt>
+        <dd>
+          <a href="https://piazza.com/class/jl77pjhw26f3q3" target="_blank">Piazza</a>
+        </dd>
     </dl>
     <h2>Course Overview</h2>
 
