--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -176,9 +176,25 @@
                                   Calculus of Service Availability</a>,
                                   Communications of the ACM,
                                   Vol. 60 No. 9, Pages 42-47, September 2017.
+                                  <p></p>
                             </li>
                           </ul>
-                          </ul>
+                        </li>
+                        <li> Optional related failure studies:
+                             <p></p>
+                        <ul>
+                          <li> D. Oppenheimer, A. Ganapathi, and D. A. Patterson,
+                            <a class="paperlink" href="http://roc.cs.berkeley.edu/papers/usits03.pdf" target="_blank">Why
+                              do Internet services fail, and what can be done about it?</a>,
+                              In Proceedings of the 4th Usenix Symposium on Internet Technologies and Systems (USITS), March 2003.
+                              <p></p>
+                          </li>
+                      <li> J. Gray,
+                        <a class="paperlink" href="http://www.hpl.hp.com/techreports/tandem/TR-85.7.pdf" target="_blank">Why Do Computers Stop and What Can Be Done About It?</a>,
+                          Technical Report 85.7, June 1985.
+                      </li>
+                    </ul>
+                </li>
                         </ul>
                     </td>
                 </tr>
