--- a/cs598-fa18/index.html
+++ b/cs598-fa18/index.html
@@ -22,8 +22,7 @@
             <a href="https://tianyin.github.io" target="_blank">Tianyin Xu</a>
             <br><a href="mailto:tyxu@illinois.edu">tyxu@illinois.edu</a>
             <br> 4108 Siebel Center
-            <p>
-            </p>
+            <p></p>
         </dd>
 
         <dt><b>Lectures</b></dt>
@@ -31,8 +30,16 @@
             Tu/Th 14:00–15:15pm
             <br>
             1103 Siebel Center
+            <p></p>
         </dd>
-        <p></p>
+
+        <dt><b>Teaching Assistant</b></dt>
+        <dd>
+            Ranvit Bommineni
+            <br><a href="mailto:bommine2@illinois.edu">bommine2@illinois.edu</a>
+            <p></p>
+        </dd>
+
         <dt><b>Office Hours</b></dt>
         <dd>
             Tu/Th 17:00–18:00pm or by appointment
