still use the availability paper

--- a/index.html
+++ b/index.html
@@ -208,11 +208,11 @@ ol { padding-left: 1.5em; }
 
 <a href="https://cs.illinois.edu/", target="_blank">Department of Computer Science</a>
 <a href="https://illinois.edu/", target="_blank">University of Illinois at Urbana-Champaign</a>
-4108 Siebel Center
-201 N. Goodwin Ave.
-Urbana, IL 61801, USA
+Office: 4108 Siebel Center (<a href="https://cs.illinois.edu/contact-us/directions-siebel-center", target="_blank">direction</a>)
+Email: tyxu at illinois dot edu
 
-Email: tyxu at illinois dot edu</span>
+Assistant: Madeleine Garvey
+mgarvey at illinois dot edu, (217) 300-6342</span>
 </pre></TD>
 
   <TD width="417" rowspan="2" align=right vAlign=top><div align="left"></div></TD>
