--- a/cs598-fa18/index.html
+++ b/cs598-fa18/index.html
@@ -113,6 +113,19 @@
         for actually reading the paper.
     </p>
 
+    <p>Read <a class="paperlink" href="https://cseweb.ucsd.edu/~wgg/CSE210/howtoread.html" target="_blank">this article</a>
+      about how to read a research paper.
+      The take-home message is that until you can answer a bunch of questions,
+      you are not done reading a paper. </p>
+
+    <p>
+      You are required to write reviews for the assigned papers.
+      The review form (which consists of a number of questions) will be posted at
+      <a href="https://piazza.com/class/jl77pjhw26f3q3" target="_blank">Piazza</a>.
+      The review is due <b>11:59pm Mon/Wed</b> (the day before the class day).
+      The paper reviews contribute to 10% of your overall grade.
+    </p>
+
     <h2>Class Participation</h2>
 
     <p>
@@ -120,7 +133,7 @@
         We will discuss the papers and articles that we will have all read
         before each class. I will lead discussions by asking questions of
         students at random in class. Note that your answers to these questions
-        form a part of your overall grade,
+        form 10% of your overall grade,
         so it is important that you both show up to class as well as read the papers.
     </p>
 
