--- a/cs598-fa18/project.html
+++ b/cs598-fa18/project.html
@@ -104,11 +104,10 @@
       </ul>
     </p>
 
-    Here is a list of ideas to get you started thinking. Feel free to pursue your own ideas.
-
-    <ul>
-      <li>(the list will be provided at the beginning of the course)</li>
-    </ul>
+    I will provide a list of ideas to get you started thinking (on
+    <a href="https://piazza.com/class/jl77pjhw26f3q3" target="_blank">Piazza</a>).
+    But I highly
+    encourage you to pursue your own ideas.
 
     <div class="footer">
         <hr>
