--- a/index.html
+++ b/index.html
@@ -344,23 +344,52 @@ where I got to know a girl who later became my wife. I <a href="travel.html" tar
 					      <TD class=content width="96%">
                   <ol>
                     <li>
-							<p class="STYLE12" style="margin-top: 5px; margin-bottom: 5px"><span style="font-size:11pt;mso-bidi-font-size:12.0pt; mso-fareast-font-family:;mso-bidi-font-family:&quot;Times New Roman&quot;;mso-font-kerning: 1.0pt;mso-ansi-language:EN-US;mso-fareast-language:ZH-CN;mso-bidi-language: AR-SA"><strong>A Large-Scale Study of Data Center Network Reliability </strong> [To appear] <br> J. Meza, T. Xu, K. Veeraraghavan, and Y. J. Song <br> In Proceedings of the 2018 Internet Measurement Conference (<font color="#083b89"><b>IMC'18</b></font>), Oct. 31 - Nov. 2, 2017. </span></p>
+							<p class="STYLE12" style="margin-top: 5px; margin-bottom: 5px"><span style="font-size:11pt;mso-bidi-font-size:12.0pt; mso-fareast-font-family:;mso-bidi-font-family:&quot;Times New Roman&quot;;mso-font-kerning: 1.0pt;mso-ansi-language:EN-US;mso-fareast-language:ZH-CN;mso-bidi-language: AR-SA">
+                <strong>A Large-Scale Study of Data Center Network Reliability </strong> [To appear]
+                <br>
+                Justin Meza, Tianyin Xu, Kaushik Veeraraghavan, and Yee Jiun Song
+                <br>
+                In Proceedings of the 2018 Internet Measurement Conference (<font color="#083b89"><b>IMC'18</b></font>), Oct. 31 - Nov. 2, 2017. </span></p>
             </li>
                     <li>
-							<p class="STYLE12" style="margin-top: 5px; margin-bottom: 5px"><span style="font-size:11pt;mso-bidi-font-size:12.0pt; mso-fareast-font-family:;mso-bidi-font-family:&quot;Times New Roman&quot;;mso-font-kerning: 1.0pt;mso-ansi-language:EN-US;mso-fareast-language:ZH-CN;mso-bidi-language: AR-SA"><strong>Maelstrom: Mitigating Datacenter-level Disasters by Draining Interdependent Traffic Safely and Efficiently </strong> [To appear] <br> K. Veeraraghavan, J. Meza, S. Michelson, S. Panneerselvam, A. Gyori, D. Chou, S. Margulis, D. Obenshain, A. Shah, Y. J. Song, and T. Xu <br> In Proceedings of the 13th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'18</b></font>), Oct. 8-10, 2018. </span></p>
+							<p class="STYLE12" style="margin-top: 5px; margin-bottom: 5px"><span style="font-size:11pt;mso-bidi-font-size:12.0pt; mso-fareast-font-family:;mso-bidi-font-family:&quot;Times New Roman&quot;;mso-font-kerning: 1.0pt;mso-ansi-language:EN-US;mso-fareast-language:ZH-CN;mso-bidi-language: AR-SA">
+                <strong>Maelstrom: Mitigating Datacenter-level Disasters by Draining Interdependent Traffic Safely and Efficiently </strong> [To appear]
+                <br>
+                Kaushik Veeraraghavan, Justin Meza, Scott Michelson, Sankaralingam Panneerselvam, Alex Gyori, David Chou, Sonia Margulis, Daniel Obenshain, Ashish Shah, Yee Jiun Song, and Tianyin Xu
+                <br>
+                In Proceedings of the 13th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'18</b></font>), Oct. 8-10, 2018. </span></p>
             </li>
                     <li>
-							<p class="STYLE12" style="margin-top: 5px; margin-bottom: 5px"><span style="font-size:11pt;mso-bidi-font-size:12.0pt; mso-fareast-font-family:;mso-bidi-font-family:&quot;Times New Roman&quot;;mso-font-kerning: 1.0pt;mso-ansi-language:EN-US;mso-fareast-language:ZH-CN;mso-bidi-language: AR-SA"><strong>How Do System Administrators Resolve Access-Denied Issues in the Real World? </strong> [<a href="papers/chi17.pdf">pdf</a> | <a href="papers/chi17.ps">ps</a> | <a href="papers/chi17.bib">bib</a>] <br> T. Xu, H. M. Naing, L. Lu, and Y. Zhou <br> In Proceedings of the 35th Annual CHI Conference on Human Factors in Computing Systems (<font color="#083b89"><b>CHI'17</b></font>), May 6-11, 2017. </span></p>
+							<p class="STYLE12" style="margin-top: 5px; margin-bottom: 5px"><span style="font-size:11pt;mso-bidi-font-size:12.0pt; mso-fareast-font-family:;mso-bidi-font-family:&quot;Times New Roman&quot;;mso-font-kerning: 1.0pt;mso-ansi-language:EN-US;mso-fareast-language:ZH-CN;mso-bidi-language: AR-SA">
+                <strong>How Do System Administrators Resolve Access-Denied Issues in the Real World? </strong> [<a href="papers/chi17.pdf">pdf</a> | <a href="papers/chi17.ps">ps</a> | <a href="papers/chi17.bib">bib</a>]
+                <br>
+                Tianyin Xu, Han Min Naing, Le Lu, and Yuanyuan Zhou
+                <br>
+                In Proceedings of the 35th Annual CHI Conference on Human Factors in Computing Systems (<font color="#083b89"><b>CHI'17</b></font>), May 6-11, 2017. </span></p>
             </li>
             <li>
-              <p class="STYLE12" style="margin-top: 5px; margin-bottom: 5px"><span style="font-size:11pt;mso-bidi-font-size:12.0pt; mso-fareast-font-family:;mso-bidi-font-family:&quot;Times New Roman&quot;;mso-font-kerning: 1.0pt;mso-ansi-language:EN-US;mso-fareast-language:ZH-CN;mso-bidi-language: AR-SA"><strong>Early Detection of Configuration Errors to Reduce Failure Damage</strong> [<a href="papers/osdi16.pdf">pdf</a> | <a href="papers/osdi16.ps">ps</a> | <a href="papers/osdi16.bib">bib</a>]<br> T. Xu, X. Jin, P. Huang, Y. Zhou, S. Lu, L. Jin, and S. Pasupathy <br> In Proceedings of the 12th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'16</b></font>), Nov. 2-4, 2016. <font color="#ED1C24"><b><br>Jay Lepreau Best Paper Award</b></font>. </span></p>
+              <p class="STYLE12" style="margin-top: 5px; margin-bottom: 5px"><span style="font-size:11pt;mso-bidi-font-size:12.0pt; mso-fareast-font-family:;mso-bidi-font-family:&quot;Times New Roman&quot;;mso-font-kerning: 1.0pt;mso-ansi-language:EN-US;mso-fareast-language:ZH-CN;mso-bidi-language: AR-SA">
+                <strong>Early Detection of Configuration Errors to Reduce Failure Damage</strong> [<a href="papers/osdi16.pdf">pdf</a> | <a href="papers/osdi16.ps">ps</a> | <a href="papers/osdi16.bib">bib</a>]
+                <br>
+                Tianyin Xu, Xinxin Jin, Peng Huang, Yuanyuan Zhou, Shan Lu, Long Jin, and Shankar Pasupathy
+                <br>
+                In Proceedings of the 12th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'16</b></font>), Nov. 2-4, 2016. <font color="#ED1C24"><b><br>Jay Lepreau Best Paper Award</b></font>. </span></p>
             </li>
             <li>
-              <p class="STYLE12" style="margin-top: 5px; margin-bottom: 5px"><span style="font-size:11pt;mso-bidi-font-size:12.0pt; mso-fareast-font-family:;mso-bidi-font-family:&quot;Times New Roman&quot;;mso-font-kerning: 1.0pt;mso-ansi-language:EN-US;mso-fareast-language:ZH-CN;mso-bidi-language: AR-SA"> <strong>Hey, You Have Given Me Too Many Knobs! Understanding and Dealing with Over-Designed Configuration in System Software</strong> [<a href="papers/fse15.pdf">pdf</a> | <a href="papers/fse15.ps">ps</a> | <a href="papers/fse15.bib">bib</a>]  <br> T. Xu, L. Jin, X. Fan, Y. Zhou, S. Pasupathy, and R. Talwadker <br> In Proceedings of the 10th Joint Meeting of the European Software Engineering Conference and the ACM SIGSOFT Symposium on the Foundations of Software Engineering (<font color="#083b89"><b>ESEC/FSE'15</b></font>), Aug. 31 - Sep. 4, 2015. </span></p>
+              <p class="STYLE12" style="margin-top: 5px; margin-bottom: 5px"><span style="font-size:11pt;mso-bidi-font-size:12.0pt; mso-fareast-font-family:;mso-bidi-font-family:&quot;Times New Roman&quot;;mso-font-kerning: 1.0pt;mso-ansi-language:EN-US;mso-fareast-language:ZH-CN;mso-bidi-language: AR-SA">
+                <strong>Hey, You Have Given Me Too Many Knobs! Understanding and Dealing with Over-Designed Configuration in System Software</strong> [<a href="papers/fse15.pdf">pdf</a> | <a href="papers/fse15.ps">ps</a> | <a href="papers/fse15.bib">bib</a>]
+                <br>
+                Tianyin Xu, Long Jin, Xuepeng Fan, Yuanyuan Zhou, Shankar Pasupathy, and Rukma Talwadker
+                <br>
+                In Proceedings of the 10th Joint Meeting of the European Software Engineering Conference and the ACM SIGSOFT Symposium on the Foundations of Software Engineering (<font color="#083b89"><b>ESEC/FSE'15</b></font>), Aug. 31 - Sep. 4, 2015. </span></p>
             </li>
             <li>
-              <p class="STYLE12" style="margin-top: 5px; margin-bottom: 5px"><span style="font-size:11pt;mso-bidi-font-size:12.0pt; mso-fareast-font-family:;mso-bidi-font-family:&quot;Times New Roman&quot;;mso-font-kerning: 1.0pt;mso-ansi-language:EN-US;mso-fareast-language:ZH-CN;mso-bidi-language: AR-SA"><strong>Do Not Blame Users for Misconfigurations </strong>  [<a href="papers/sosp13.pdf">pdf</a> | <a href="papers/sosp13.ps">ps</a> | <a href="papers/sosp13.bib">bib</a>]
-                <br> T. Xu, J. Zhang, P. Huang, J. Zheng, T. Sheng, D. Yuan, Y. Zhou, and S. Pasupathy <br> In Proceedings of the 24th ACM Symposium on Operating Systems Principles (<font color="#083b89"><b>SOSP'13</b></font>), Nov. 3-6, 2013. </span></p>
+              <p class="STYLE12" style="margin-top: 5px; margin-bottom: 5px"><span style="font-size:11pt;mso-bidi-font-size:12.0pt; mso-fareast-font-family:;mso-bidi-font-family:&quot;Times New Roman&quot;;mso-font-kerning: 1.0pt;mso-ansi-language:EN-US;mso-fareast-language:ZH-CN;mso-bidi-language: AR-SA">
+                <strong>Do Not Blame Users for Misconfigurations </strong>  [<a href="papers/sosp13.pdf">pdf</a> | <a href="papers/sosp13.ps">ps</a> | <a href="papers/sosp13.bib">bib</a>]
+                <br>
+                Tianyin Xu, Jiaqi Zhang, Peng Huang, Jing Zheng, Tianwei Sheng, Ding Yuan, Yuanyuan Zhou, and Shankar Pasupathy
+                <br>
+                In Proceedings of the 24th ACM Symposium on Operating Systems Principles (<font color="#083b89"><b>SOSP'13</b></font>), Nov. 3-6, 2013. </span></p>
             </li>
           </ol>
               </TD>
