--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -172,7 +172,7 @@
                                 <p></p>
                             </li>
 
-                        <li> Optional related failure studies:
+                        <li> (Optional) related failure studies:
                              <p></p>
                         <ul>
                           <li> D. Oppenheimer, A. Ganapathi, and D. A. Patterson,
@@ -220,7 +220,7 @@
                                   Distinguished Lecture Series (DLS), Stanford, 2010.
                                   <p></p>
                             </li>
-                            <li> Optional related papers mentioned in Dean's talk:
+                            <li> (Optional) related papers mentioned in Dean's talk:
                                  <p></p>
                               <ul>
                                 <li>S. Ghemawat, H. Gobioff, and 	S-T. Leung,
@@ -242,26 +242,10 @@
                                 (OSDI), October 2012.
                             </li>
                           </ul>
+                        </li>
                         </ul>
                     </td>
                 </tr>
-<!--
-                <tr>
-                    <td class="date"><a name="2th">Thu<br>9/6</a></td>
-                    <td class="papers">
-                        <ul>
-
-
-                            <li> A. Gupta and J. Shute,
-                                <a class="paperlink" href="https://static.googleusercontent.com/media/research.google.com/en//pubs/archive/44686.pdf" target="_blank">High-Availability at Massive Scale: Building
-                                Google's Data Infrastructure for Ads</a>,
-                                In Proceedings of the 9th Workshop on Business
-                                Intelligence for the Real Time Enterprise, August 2015.
-                            </li>
-                        </ul>
-                    </td>
-                </tr>
--->
             </tbody>
         </table>
 
@@ -272,6 +256,24 @@
                 <tr>
                     <td class="date"><a name="2th">Thu<br>9/6</a></td>
                     <td class="papers">
+                      <ul>
+                        <li> T. Do, M. Hao, T. Leesatapornwongsa, T. Patana-anake, and H. S. Gunawi,
+                            <a class="paperlink" href="http://ucare.cs.uchicago.edu/pdf/socc13-limplock.pdf" target="_blank">Limplock: Understanding
+                            the Impact of Limpware on Scale-Out Cloud Systems</a>,
+                            In Proceedings of the 5th ACM Symposium on Cloud Computing (SoCC),
+                            October, 2013.
+                            <p></p>
+                        </li>
+                        <li> A. Kadav, M. J. Renzelmann, and M. M. Swift,
+                            <a class="paperlink" href="https://www.sigops.org/sosp/sosp09/papers/kadav-sosp09.pdf" target="_blank">Tolerating
+                            Hardware Device Failures in Software</a>,
+                            In Proceedings of the 22nd ACM Symposium on
+                            Operating Systems Principles (SOSP),
+                            October 2009.
+                            <p></p>
+                        </li>
+                      <li> (Optional) related papers on the characteristics of the faults discussed in class:
+                           <p></p>
                         <ul>
                             <li> H. S. Gunawi, et al.,
                                 <a class="paperlink" href="https://www.usenix.org/node/210509" target="_blank">
@@ -281,14 +283,16 @@
                                   File and Storage Technologies (FAST), February 2018.
                                 <p></p>
                             </li>
-                            <li> B. Schroeder, R. Lagisetty, and A. Merchant,
-                                <a class="paperlink" href="https://www.usenix.org/node/194415" target="_blank">
-                                  Flash Reliability in Production: The Expected and the Unexpected</a>,
-                                  In Proceedings of the 14th USENIX Conference on
-                                  File and Storage Technologies (FAST), February 2016.
+                            <li> A. Kadav and M. M. Swift,
+                                <a class="paperlink" href="http://pages.cs.wisc.edu/~swift/papers/asplos12_drivers.pdf" target="_blank">
+                                  Understanding Modern Device Drivers</a>,
+                                  In Proceedings of the 17th International Conference on Architectural
+                                  Support for Programming Languages and Operating Systems (ASPLOS), March, 2012.
                                 <p></p>
                             </li>
                         </ul>
+                      </li>
+                    </ul>
                     </td>
                 </tr>
             </tbody>
@@ -457,7 +461,7 @@
                                 <a class="paperlink" href="https://people.cs.uchicago.edu/~shanlu/paper/sosp15-itask.pdf" target="_blank">Interruptible
                                   Tasks: Treating Memory Pressure As Interrupts
                                   for Highly Scalable Data-Parallel Programs</a>,
-                                  In Proceedings of the 25th Symposium on Operating
+                                  In Proceedings of the 25th ACM Symposium on Operating
                                   Systems Principles (SOSP), October 2015.
                                   <p></p>
                             </li>
@@ -627,7 +631,8 @@
                         <ul>
 
                             <li> K. Pei, Y. Cao, J. Yang, and S. Jana,
-                                <a class="paperlink" href="https://dl.acm.org/citation.cfm?id=3132785" target="_blank">DeepXplore: Automated Whitebox Testing of Deep Learning Systems</a>, In Proceedings of the 26th Symposium on Operating Systems Principles (SOSP), October 2017.
+                                <a class="paperlink" href="https://dl.acm.org/citation.cfm?id=3132785" target="_blank">DeepXplore: Automated Whitebox Testing of Deep Learning Systems</a>,
+                                In Proceedings of the 26th ACM Symposium on Operating Systems Principles (SOSP), October 2017.
                                 <p></p>
                             </li>
                             <li> C. McCaffrey,
@@ -765,12 +770,12 @@
 
                             <li> J. Mace, R. Roelke, and R. Fonseca,
                                 <a class="paperlink" href="http://sigops.org/sosp/sosp15/current/2015-Monterey/printable/122-mace.pdf" target="_blank">Pivot
-  Tracing: Dynamic Causal Monitoring for Distributed Systems</a>, In Proceedings of the 25th Symposium on Operating Systems Principles (SOSP), October 2015.
+  Tracing: Dynamic Causal Monitoring for Distributed Systems</a>, In Proceedings of the 25th ACM Symposium on Operating Systems Principles (SOSP), October 2015.
                                 <p></p>
                             </li>
                             <li> J. Kaldor, J. Mace, M. Bejda, E. Gao, W. Kuropatwa, J. O'Neill, K. W. Ong, B. Schaller, P. Shan, B. Viscomi, V. Venkataraman, K. Veeraraghavan, and Y. J. Song,
                                 <a class="paperlink" href="https://dl.acm.org/authorize.cfm?key=N47147" target="_blank">Canopy:
-  An End-to-End Performance Tracing And Analysis System</a>, In Proceedings of the 26th Symposium on Operating Systems Principles (SOSP), October 2017.
+  An End-to-End Performance Tracing And Analysis System</a>, In Proceedings of the 26th ACM Symposium on Operating Systems Principles (SOSP), October 2017.
                             </li>
                         </ul>
                     </td>
@@ -817,7 +822,9 @@
                                 <p></p>
                             </li>
                             <li> C. Hawblitzel, J. Howell, M. Kapritsos, J. R. Lorch, B. Parno, M. L. Roberts, S. Setty, and B. Zill,
-                                <a class="paperlink" href="http://sigops.org/sosp/sosp15/current/2015-Monterey/printable/250-hawblitzel.pdf" target="_blank">IronFleet: Proving Practical Distributed Systems Correct</a>, In Proceedings of the 25th Symposium on Operating Systems Principles (SOSP), October 2015.
+                                <a class="paperlink" href="http://sigops.org/sosp/sosp15/current/2015-Monterey/printable/250-hawblitzel.pdf" target="_blank">IronFleet:
+                                  Proving Practical Distributed Systems Correct</a>,
+                                In Proceedings of the 25th ACM Symposium on Operating Systems Principles (SOSP), October 2015.
                                 <p></p>
                             </li>
                         </ul>
