--- a/cs598-fa18/index.html
+++ b/cs598-fa18/index.html
@@ -106,20 +106,22 @@
     </ul>
 
     <p>
-        I strongly encourage you to discuss the papers with other students in
+      I highly recommend you to read <a class="paperlink" href="https://cseweb.ucsd.edu/~wgg/CSE210/howtoread.html" target="_blank">Griswold's
+      advices on how to read a research paper</a>.
+      The take-home message is that until you can answer a bunch of questions,
+      you are not done reading a paper.
+    </p>
+
+    <p>
+        I also strongly encourage you to discuss the papers with other students in
         the class — you may have insights that others do not, and vice versa.
         Often students form reading groups, which I heartily encourage.
         Note that group discussion, however, is not an effective substitute
         for actually reading the paper.
     </p>
 
-    <p>Read <a class="paperlink" href="https://cseweb.ucsd.edu/~wgg/CSE210/howtoread.html" target="_blank">this article</a>
-      about how to read a research paper.
-      The take-home message is that until you can answer a bunch of questions,
-      you are not done reading a paper. </p>
-
     <p>
-      You are required to write reviews for the assigned papers.
+      You are required to write reviews for the designated papers.
       The review form (which consists of a number of questions) will be posted at
       <a href="https://piazza.com/class/jl77pjhw26f3q3" target="_blank">Piazza</a>.
       The review is due <b>11:59pm Mon/Wed</b> (the day before the class day).
