link the intro slides

--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -130,7 +130,7 @@
 
                         <ul>
                             <li>
-                                Course Overview
+                                <a class="paperlink" href="cs598_intro.pdf" target="_blank">Course Overview</a>
                             </li>
                             <!--
                             <li>
